--- a/Wikipedia_Viewer.css
+++ b/Wikipedia_Viewer.css
@@ -1,8 +1,34 @@
-$font-color: rgba(255,255,255,0.8)
-$font-family-header: Roboto
-$font-family-text: 'Opens Sans'
-$root-font-size: 50vw
-$header-font-size: 2em
-$text-font-size: 0.8em
+html {
+  background-color: rgba(43, 93, 202, 0.79);
+}
+
+.app-container {
+  background-color: rgba(43, 93, 202, 0.79);
+  color: white;
+}
+
+.app-container i {
+  font-size: 20px;
+}
+
+a {
+  text-decoration: none;
+}
+
+p {
+  color: white;
+  font-size: 20px;
+  font-family: "Roboto", Sans-Serif;
+}
+
+button {
+  width: 50px;
+  height: 20px;
+}
+
+i:hover {
+  cursor: pointer;
+  color: grey;
+}
 
 
